# mimble-node

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.ci/: release.yml  windows-release.yml
api/: Cargo.toml
api/src/: foreign_rpc.rs  lib.rs  owner.rs  owner_rpc.rs
api/src/handlers/: peers_api.rs  server_api.rs
api/tests/: rest.rs
chain/: Cargo.toml
chain/src/: chain.rs  error.rs  lib.rs  pipe.rs  store.rs
chain/src/txhashset/: rewindable_kernel_view.rs  (+2 more)
chain/tests/: bitmap_accumulator.rs  chain_test_helper.rs  data_file_integrity.rs  mine_simple_chain.rs  store_indices.rs  test_coinbase_maturity.rs  test_txhashset.rs
config/: Cargo.toml
config/src/: comments.rs  config.rs  lib.rs
core/: Cargo.toml
core/src/: consensus.rs  core.rs  genesis.rs
core/tests/: block.rs  common.rs  consensus_automated.rs  consensus_mainnet.rs  core.rs  merkle_proof.rs  pmmr.rs  transaction.rs  vec_backend.rs  verifier_cache.rs
doc/: roadmap.md
keychain/: Cargo.toml
keychain/src/: lib.rs
p2p/: Cargo.toml
p2p/src/: lib.rs  msg.rs  peers.rs  store.rs  types.rs
p2p/tests/: peer_addr.rs  peer_handshake.rs  ser_deser.rs
pool/: Cargo.toml
pool/src/: lib.rs  pool.rs  transaction_pool.rs  types.rs
pool/tests/: block_building.rs  block_max_weight.rs  block_reconciliation.rs  coinbase_maturity.rs  common.rs  transaction_pool.rs
servers/: Cargo.toml
servers/src/: lib.rs
store/: Cargo.toml
store/src/: lib.rs
store/tests/: lmdb.rs  pmmr.rs  prune_list.rs  utxo_set_perf.rs
util/: Cargo.toml
util/src/: logger.rs
util/tests/: file.rs  zip.rs
(+10 files in other folders)
