[package]
name = "mimble_config"
version = "4.0.0"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Configuration for grin, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin"
keywords = [ "crypto", "mimble", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.6"
serde = "1"
serde_derive = "1"
toml = "0.4"
dirs = "1.0.3"
failure = "0.1"
failure_derive = "0.1"

mimble_core = { path = "../core", version = "4.0.0" }
mimble_servers = { path = "../servers", version = "4.0.0" }
mimble_p2p = { path = "../p2p", version = "4.0.0" }
mimble_util = { path = "../util", version = "4.0.0" }

[dev-dependencies]
pretty_assertions = "0.5.1"
